--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-node@v3
         with:
-          go-version: 1.19
+          node-version: 18
+      - run: npm install
       - run: npm run build
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
